/***********************************************************************
X3 ChangeLog

2009-11-15  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/hosthiding.c: Fix for crash bug in make_virthost() when host
	name doesnt have a '.' in it.

2009-11-15  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.c: fix variable set for registering nick change functions.

2009-11-14  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for bug #2869968 (*NickServ.oregister allowing
	invalid handles)

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to new_channel_func_t and
	reg_new_channel_func.

	* src/chanserv.c src/opserv.c: add extra NULL argument/parameter to
	reflect change in hash.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to
	handle_merge_func_t and reg_handle_merge_func.

	* src/mod-helpserv.c: add extra NULL argument/parameter to reflect change
	in nickserv.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to allowauth_func_t
	and reg_allowauth_func.

	* src/mod-helpserv.c: add extra NULL argument/parameter to reflect change
	in nickserv.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/nickserv.h src/nickserv.c: add extra parameter to failpw_func_t and
	reg_failpw_func.

	* src/mod-helpserv.c: add extra NULL argument/parameter to reflect change
	in nickserv.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/hash.h src/hash.c: add extra parameter to topic_func_t and
	reg_topic_func.

	* src/chanserv.c src/mod-python.c: add extra NULL argument/parameter to
	reflect change in hash.

2009-11-01  Henrik Stuart  <evilnet@hstuart.dk>

	* src/proto.h src/proto-common.c: add extra parameter to chanmsg_func_t
	and reg_chanmsg_func.

	* src/chanserv.c src/modcmd.c: add extra NULL argument/parameter to
	reflect change in proto.

2009-10-31  Henrik Stuart  <evilnet@hstuart.dk>
